--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
-  "rewrites":[
-    {"source": "/(.*)", "destination":"/"}
+  "builds":[
+    {"src":"*.js", "use":"@vercel/node"}
+  ],
+  "routes":[
+    {"src": "/(.*)", "dest":"/"}
   ]
 }
